fix: update Azure Static Web Apps workflow to specify API location and add routing for anonymous access

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,5 +2,11 @@
     "navigationFallback": {
       "rewrite": "index.html",
       "exclude": ["*.{png,jpg,gif,svg}", "*.css"]
-    }
+    },
+    "routes": [
+      {
+        "route": "/api/*",
+        "allowedRoles": ["anonymous"]
+      }
+    ]
 }
