--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@azure/static-web-apps-cli": "^2.0.7",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
