--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,58 +1,38 @@
 
-name: PR Validation (SWA Preview + Playwright)
+name: PR Validation (Playwright)
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-
-permissions:
-  contents: write
-  pull-requests: write
-  statuses: read
+  workflow_run:
+    workflows: ["Azure Static Web Apps CI/CD"]
+    types:
+      - completed
 
 jobs:
-  deploy-and-test:
+  test-preview:
+    if: >
+      github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      # Deploy to SWA PR Preview
-      - name: Deploy to Azure Static Web Apps (Preview)
-        id: swa
-        uses: azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.SWA_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          app_location: "/"
-          # Next.js pages router: no output_location for SSR/ISR/API support
+      - name: Load Preview URL
+        run: echo "PREVIEW_URL=${{ github.event.workflow_run.outputs.preview_url }}" >> $GITHUB_ENV
 
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
 
-      - name: Install deps
-        run: npm ci
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+      - run: npm ci
+      - run: npx playwright install --with-deps
 
       - name: Run Playwright Tests
-        env:
-          PREVIEW_URL: ${{ steps.swa.outputs.static_web_app_url }}
-          CI: "true"
         run: npm run test:e2e
-
-      - name: Upload Playwright Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report
 
       - name: Auto-merge PR
         if: success()
         uses: pascalgn/automerge-action@v0.16.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
